Display currently connected to websocket in location

--- a/Mediator/public/websocket.html
+++ b/Mediator/public/websocket.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>WebSocket Chat</h1>
 	<form id="websocket_submission" method="GET">
-		<label for="location">Location</label><input id="location" name="location" type="text" />
+		<label for="location">Location</label><input id="location" name="location" type="text" value="ws://0.0.0.0:3000/ws"/>
 		<input type="button" id="websocket_location_submit" value="Change location" />
 		<br />
 		<label for="message">Message</label><input id="message" name="message" type="text" />
