Update heading and title

--- a/Mediator/public/websocket.html
+++ b/Mediator/public/websocket.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>WebSocket Chat</title>
+	<title>WebSocket Demo</title>
 </head>
 <body>
-	<h1>WebSocket Chat</h1>
+	<h1>WebSocket Demo</h1>
 	<form id="websocket_submission" method="GET">
 		<label for="location">Location</label><input id="location" name="location" type="text" value="ws://0.0.0.0:3000/ws"/>
 		<input type="button" id="websocket_location_submit" value="Change location" />
